--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.73.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint-plugin-react": "^7.33.2"
   },
   "private": true
 }
