--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/segmented-control": "^2.2.2",
+    "@react-navigation/native": "^6.1.12",
+    "@react-navigation/native-stack": "^6.9.20",
     "expo": "~50.0.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-bottom-sheet-behavior": "^2.0.0",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-picker-select": "^9.0.1",
+    "react-native-reanimated": "^3.7.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-sliding-up-panel": "^1.1.12",
+    "react-native-vector-icons": "^10.0.3",
+    "rn-sliding-up-panel": "^2.4.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
