--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@gorhom/bottom-sheet": "^4.6.1",
+    "@react-navigation/bottom-tabs": "^6.5.14",
+    "@react-navigation/native": "^6.1.12",
     "expo": "^49.0.23",
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-web": "~0.19.6",
     "react-native": "0.73.2",
     "react-native-maps": "^1.10.3"
   },
