--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
+    "@react-navigation/stack": "^6.3.25",
     "@stripe/stripe-react-native": "^0.35.1",
     "expo": "~50.0.3",
     "expo-location": "~16.5.5",
