--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@expo/metro-config": "^0.10.0",
     "@expo/metro-runtime": "~3.1.3",
     "@gorhom/bottom-sheet": "^4.6.1",
+    "@mapbox/geo-viewport": "^0.5.0",
     "@react-native-community/segmented-control": "^2.2.2",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.12",
@@ -28,7 +29,7 @@
     "react-native": "0.73.4",
     "react-native-bottom-sheet-behavior": "^2.0.0",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-maps": "1.10.0",
+    "react-native-maps": "^1.11.3",
     "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
@@ -37,8 +38,11 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
+    "react-router-dom": "^6.22.3",
     "rn-sliding-up-panel": "^2.4.6",
     "stripe": "^14.18.0",
+    "supercluster": "^8.0.1",
+    "use-supercluster": "^1.2.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
