--- a/mobile/package.json
+++ b/mobile/package.json
@@ -44,15 +44,11 @@
     "react-router-dom": "^6.22.3",
     "rn-sliding-up-panel": "^2.4.6",
     "uuid": "^9.0.1",
-    "@expo/metro-runtime": "~3.1.3",
-    "@stripe/stripe-react-native": "^0.35.1",
-    "react-dom": "18.2.0",
-    "react-native-stripe-checkout-webview": "^0.0.13",
     "react-native-webview": "^13.8.1",
     "stripe": "^14.18.0",
     "supercluster": "^8.0.1",
     "use-supercluster": "^1.2.0",
-    "uuid": "^9.0.1"
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
