--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
     "@expo/config": "^8.1.1",
     "@expo/metro-config": "^0.10.0",
     "@expo/metro-runtime": "~3.1.3",
+    "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-community/segmented-control": "^2.2.2",
     "@react-navigation/bottom-tabs": "^6.5.14",
@@ -24,7 +25,6 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.0.1",
     "react-native": "0.73.4",
     "react-native-bottom-sheet-behavior": "^2.0.0",
     "react-native-gesture-handler": "~2.14.0",
@@ -34,7 +34,6 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-stripe-checkout-webview": "^0.0.13",
-    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "rn-sliding-up-panel": "^2.4.6",
     "stripe": "^14.18.0",
