--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.3",
-    "stripe": "^14.20.0",
-    "uuid": "^9.0.1"
+    "stripe": "^14.20.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "uuid": "^9.0.1"
   }
 }
